<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="381dp"
        android:layout_height="64dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_products">

        <RadioButton
            android:id="@+id/rb_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:checked="true"
            android:fontFamily="serif-monospace"
            android:text="@string/all"
            android:textColor="@color/button_background_color"
            android:textSize="12sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/rb_notebook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:fontFamily="serif-monospace"
            android:text="@string/notebook"
            android:textColor="@color/button_background_color"
            android:textSize="12sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/rbmntr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:fontFamily="serif-monospace"
            android:text="@string/monitor"
            android:textColor="@color/button_background_color"
            android:textSize="12sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/rbcnsl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:fontFamily="serif-monospace"
            android:text="@string/console"
            android:textColor="@color/button_background_color"
            android:textSize="12sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/rbhdst"
            android:layout_width="93dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:fontFamily="serif-monospace"
            android:text="@string/headset"
            android:textColor="@color/button_background_color"
            android:textSize="12sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/rbdsktop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:fontFamily="serif-monospace"
            android:text="@string/desktop"
            android:textColor="@color/button_background_color"
            android:textSize="12sp"
            android:textStyle="bold" />
    </RadioGroup>


</LinearLayout>